<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>franka_realsense</name>
  <version>0.0.0</version>
  <description>Hand to Eye Calib Tools for Franka Emika and Intel Realsense</description>
  <maintainer email="prath4@asu.edu">prabin</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclpy</depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>franka_moveit_config</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
